# portuguese-verbs-conjugator

./: Cargo.toml  README.md
examples/: conjugar_verbo.rs
helper_scripts/: .~lock.conjugador-de-verbos-desprotegido.xlsx#  conjugador-de-verbos-desprotegido.xlsx  create_json.py  get_conjugations.py  get_irregular_verbs.py  output  padroes_conjugacao.json  teste.py  verbos_irregulares.json  verbos_irregulares_formatados  verbs_to_test.json
src/: classificador_verbal.rs  classificador_verbos.rs  conjugador_verbal.rs  lib.rs  padroes.rs  padroes_conjugacao.json  padroes_conjugacao.rs  padroes_infinitivo.rs  tempos_verbais.rs  tipos_de_verbos_enum.rs
src/classificador_verbal/: all_irregular_verbs.rs  mod.rs  verbos_irregulares.json
src/conjugador_verbal/: mod.rs
src/helper_script/: .~lock.conjugador-de-verbos-1-2-2-excelled.xlsx#  conjugador-de-verbos-1-2-2-excelled.xlsx  create_json.py
src/helpers/: mod.rs  padrao.rs  padroes_comuns.rs  padroes_conjugacao.json  padroes_conjugacao_new.json  padroes_conjugacao_old.json  padroes_conjugacao_old_old.json
tests/: example_test.rs  test_classificador_verbal.rs  test_conjugador_verbal.rs
tests/arquivos_conjugacoes/: aaa.py  varios_verbos_teste.json  verbo_abrir_conjugacao.json  verbo_amar_conjugacao.json  verbo_andar_conjugacao.json  verbo_averiguar_conjugacao.json  verbo_caber_conjugacao.json  verbo_comer_conjugacao.json  verbo_crer_conjugacao.json  verbo_dar_conjugacao.json  verbo_digerir_conjugacao.json  verbo_dizer_conjugacao.json  verbo_escrever_conjugacao.json  verbo_falar_conjugacao.json  verbo_ir_conjugacao.json  (+22 more)
