[package]
name = "portuguese_verbs_conjugator"
version = "0.1.1"
edition = "2024"
description = "Crate for conjugating verbs in portuguese based on the patterns found on the [Excel spreadsheet by Radames Manosso](https://radames.manosso.nom.br/bitabit/planilhas/conjugador-de-verbos-em-excel/)\nNot fully functional, still fixing some details"
exclude = ["helper_scripts/*"]
license = "MIT OR Apache-2.0"
keywords = ["portuguese", "conjugation", "conjugacao"]
repository = "https://github.com/dantee-e/portuguese-verbs-conjugator"

[dependencies]
serde_json = "1.0.149"
strum = "0.27.2"
strum_macros = "0.27.2"
hashbrown = { version = "0.16.0", features = ["serde"] }
serde = { version="1.0.228", features = ["derive"] }
once_cell = "1.21.3"

